--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Сложный JvaScript простым языком</title>
   </head>
   <body>
+    <h1>Сложный JavaScript простым языком</h1>
     <script src="index.js"></script>
   </body>
 </html>
